# Polymarket-BTC-short-horizon-signal-study

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
docs/: polymarket-btc-study.md
docs/results/: backtest-metrics.json  backtest-trades.csv  baseline-metrics.json  entry-offset-15m.csv  entry-offset-5m.csv  registry-summary.json
notebooks/: backtest.ipynb  stats_tests.ipynb
src/btcxpoly/: __main__.py  backtest.py  cli.py  clients.py  config.py  features.py  models.py  research.py  storage.py  utils.py
tests/: test_pipeline.py  test_registry_parsing.py  test_utils.py
